Add Apache Commons dependency